--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <nav>
             <a href="#">About us</a>
-            <a href="#">Hobby</a>
-            <a href="#">Contacts</a>
+            <a href="#my_game">Hobby</a>
+            <a href="#posts_block">Contacts</a>
         </nav>
     </header>
 
@@ -68,15 +68,26 @@
                 <div>12</div>
             </div>
         </div>
+
+        <div class="posts_block" id="posts_block">
+            <h2>Блог</h2>
+            <!-- <button>показать посты</button> -->
+            <div class="posts_block-container">
+                <!-- <p>
+                    <h3></h3>
+                    <span></span>
+                </p> -->
+            </div>
+        </div>
+
     </main>
+
+
     <footer>
         <div class="footer">
             2023
         </div>
     </footer>
-
-
-    </div>
 
     <script src="./script.js"></script>
 </body>
